<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".TambahActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/laki_laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/laki_laki"/>
        <RadioButton
            android:id="@+id/perempuan"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_tambah_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpan"/>


</LinearLayout>