<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_main"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btn_pindah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_halaman"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/btn_pindah_denganData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_halaman_data"
        android:layout_marginBottom="30dp"
        />

</LinearLayout>